--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
   "peerDependencies": {
     "@airbnb/config-babel": "^2.0.1",
     "@superset-ui/chart-controls": "*",
-    "@superset-ui/core": "*",
-    "react": "^16.13.1"
+    "@superset-ui/core": "*"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.0",
